iptables_rules
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:KNOCK - [0:0]
:SSH-INPUT - [0:0]
:SSH-INPUTTWO - [0:0]

-A INPUT -j KNOCK
-A KNOCK -p icmp --icmp-type any -j ACCEPT
-A KNOCK -m state --state ESTABLISHED,RELATED -j ACCEPT
-A KNOCK -m state --state NEW -m tcp -p tcp --dport 22 -m recent --rcheck --seconds 30 --name SSH2 -j ACCEPT
-A KNOCK -m state --state NEW -m tcp -p tcp -m recent --name SSH2 --remove -j DROP
-A KNOCK -m state --state NEW -m tcp -p tcp --dport 1111 -m recent --rcheck --name SSH1 -j SSH-INPUTTWO
-A KNOCK -m state --state NEW -m tcp -p tcp -m recent --name SSH1 --remove -j DROP
-A KNOCK -m state --state NEW -m tcp -p tcp --dport 2222 -m recent --rcheck --name SSH0 -j SSH-INPUT
-A KNOCK -m state --state NEW -m tcp -p tcp -m recent --name SSH0 --remove -j DROP
-A KNOCK -m state --state NEW -m tcp -p tcp --dport 3333 -m recent --name SSH0 --set -j DROP
-A SSH-INPUT -m recent --name SSH1 --set -j DROP
-A SSH-INPUTTWO -m recent --name SSH2 --set -j DROP
-A KNOCK -j DROP
COMMIT

# sudo bash -c 'echo "net.ipv4.conf.all.forwarding=1" >> /etc/sysctl.conf'; sudo sysctl -p
# iptables -t nat -A POSTROUTING -o eth0 -s 192.168.3.0/4 -j MASQUERADE
# iptables -t nat -A PREROUTING -i eth0 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.3.10:80
